[tool.poetry]
name = "ml-credit-card-fraud"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
kaggle = "^1.6.8"
pyarrow = "^15.0.2"
missingno = "^0.5.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
